--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "minimist": "^1.2.5",
     "moment": "^2.29.1",
     "morgan": "1.9.x",
+    "multer": "^1.4.5-lts.1",
     "multiparty": "^4.2.2",
     "node-stream-zip": "^1.15.0",
     "nodemailer": "^6.6.3",
@@ -75,8 +76,8 @@
     "@babel/eslint-parser": "^7.15.0",
     "@babel/node": "^7.14.9",
     "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
-    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/plugin-proposal-optional-chaining": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "chai": "^4.3.4",
     "chokidar-cli": "latest",
