--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@analytics/google-analytics": "^0.2.2",
+    "adm-zip": "^0.5.10",
     "analytics": "^0.3.5",
     "async-retry": "^1.3.3",
     "aws-sdk": "^2.960.0",
