--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "node-stream-zip": "^1.15.0",
     "nodemailer": "^6.6.3",
     "nodemon": "^1.19.4",
+    "p-queue": "^7.3.4",
     "php-serialize": "^4.0.2",
     "pino": "^6.13.1",
     "pino-http": "^5.7.0",
